# hftcore

./: Cargo.toml  Апи_документация.txt  Контекст_для_нейросетей.txt  Контекст_для_стратегий.txt  ключи
copy_into_strategies/: Cargo.toml  types.rs
src/: common.rs  exchange_data.rs  exchange_trade.rs  ffi_types.rs  main.rs  routes.rs  strategies.rs  user_data.rs
src/old/: exchange.rs  exchange_trade.rs  main.rs  order.rs
src/routes/: strategy.rs  user_data.rs
src/strategies/: manager.rs  order.rs  storage.rs
src/user_data/: manager.rs  parser.rs  types.rs
strategies/db/: 121.json
strategies/db/bid_tracker/: Cargo.toml  metadata.json
strategies/db/funding/: Cargo.toml
strategies/db/funding_catcher/: Cargo.toml
strategies/db/funding_collector/: Cargo.toml  metadata.json
strategies/db/funding_grid_precalc/: Cargo.toml
strategies/db/funding_grid_safe/: Cargo.toml
strategies/db/grid_test/: Cargo.toml
strategies/db/grid_test/src/: lib.rs
strategies/db/logger_ffi/: Cargo.toml
strategies/db/logger_pro/: Cargo.toml
strategies/db/ma_strategy/: Cargo.toml  metadata.json
strategies/db/ma_strategy_hui/: Cargo.toml  metadata.json
strategies/db/ma_with_stop/: Cargo.toml  metadata.json
strategies/db/minimal/: Cargo.toml  metadata.json
strategies/db/reduce_test/: Cargo.toml
strategies/db/sol_bid_tracker/: Cargo.toml  metadata.json
strategies/db/sol_buyer/: Cargo.toml  metadata.json
strategies/db/sol_buyer/src/: lib.rs
strategies/db/sol_market_buyer/: Cargo.toml  metadata.json
strategies/db/sol_mm_strategy/: Cargo.toml  metadata.json
strategies/db/test_strategy/: Cargo.toml  (+1 more)
(+28 files in other folders)
